--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             <div class="slide-one-item home-slider owl-carousel">
               <img src="images/coach_hero_1.jpg" alt="Image" class="img-fluid img">
               <img src="images/coach_hero_2.jpg" alt="Image" class="img-fluid img">
+              <img src="images/coach_hero_3.jpg" alt="Image" class="img-fluid img">
             </div>
           </div>
         </div>
